# testparking

./: req.txt
testParking-master/: Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  example.env  pyproject.toml  sphinx.conf
testParking-master/core/: settings.py  urls.py
testParking-master/docs/examples/: parking.csv
testParking-master/parking/: models.py  serializers.py  urls.py  views.py
testParking-master/parking/migrations/: 0001_initial.py
